# stock-trade-by-z

./: .gitignore  README.md  configs.json  fetch_kline.py  main.py  output.txt  pyproject.toml  select_stock.py  test_selector.py
data_hk/: HK_00700.csv
stocktradebyz/: __init__.py  cli.py  fetch.py  init.py  select.py  selector.py
stocktradebyz/config/: __init__.py  configs.json  utils.py
tests/: README.md  run_all_tests.sh  run_detailed_test.sh  run_detailed_test_flush.sh  run_test.sh
tests/functional/: __init__.py  test_detailed.py  test_hk.py  test_hk_simple.py  test_import.py  test_simple.py
tests/integration/: test_selector_detailed.py
tests/outputs/: test_detailed_output.txt  test_detailed_output_flush.txt  test_output2.txt  test_simple_output.txt
tests/unit/: test_selector.py
